2001-02-24  Alexandre Oliva  <aoliva@redhat.com>

	* config/mn10300/mn10300.h (DBX_REGISTER_NUMBER): Reverted
	2000-08-26's patch.
	(EXTRA_CONSTRAINT): Formatting changes.

2001-02-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* rtl.c (rtl_check_failed_code2): Fix typo in last change.

Fri Feb 23 15:28:39 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* diagnostic.c (trim_filename): No longer static.
	* toplev.h (trim_filename): Declare.
	* rtl.c (rtl_check_failed_bounds): Call internal_error.
	(rtl_check_failed_type1, rtl_check_failed_type2): Likewise.
	(rtl_check_failed_code1, rtl_check_failed_code2): Likewise.
	(rtvec_check_failed_bounds): Likewise.
	* tree.c (tree_check_failed, tree_class_check_failed): Likewise.

	* convert.c (convert_to_integer): Don't do unsigned unless result or
	both inputs are unsigned.

	* fold-const.c (fold_convert): Don't call size_int_type_wide if
	input overflows.

	* c-decl.c (set_block): Set NAMES and BLOCKS from BLOCK.

	* varasm.c (output_constant): Recompute CODE after lang-specific fn.

2001-02-23  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (extract_muldiv) [case PLUS_EXPR]: If not MULT_EXPR,
	check if either operand is divisible by C.
	(multiple_of_p): Handle LSHIFT_EXPR with small constant shift.
	If type is signed, consider negative numbers as well.

2001-02-22  Richard Henderson  <rth@redhat.com>

	* config/ia64/crtbegin.asm (.fini): Use pc-relative relocs to
	reach .text instead of gp-relative relocs.
	* config/ia64/crtend.asm (.init): Likewise.

2001-02-22  Andreas Jaeger  <aj@suse.de>

	* extend.texi (C++ Attributes): Fix typo.

2001-02-21  David Mosberger  <davidm@hpl.hp.com>

	* config/ia64/ia64.c (ia64_epilogue_uses): For syscall_linkage
	functions, drop current_function_args_info.words test.
	(ia64_compute_frame_size): Mark syscall_linkage functions as
	using eight input registers.

2001-02-21  Loren J. Rittle  <ljrittle@acm.org>
	Bruce Korb  <bkorb@gnu.org>
